--- a/src/main/resources/vm/java/Controller.java.vm
+++ b/src/main/resources/vm/java/Controller.java.vm
@@ -6,13 +6,11 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import cn.net.susan.entity.ResponsePageEntity;
+import ${package}.entity.ResponsePageEntity;
 import ${package}.entity.${className}ConditionEntity;
 import ${package}.entity.${className}Entity;
 import ${package}.service.${className}Service;
 import javax.validation.constraints.NotNull;
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
 import java.util.List;
 
 /**
@@ -21,7 +19,6 @@ import java.util.List;
  * @author ${author} 该项目是知识星球：java突击队 的内部项目
  * @date ${datetime}
  */
-@Api(tags = "${tableComment}操作", description = "${tableComment}接口")
 @RestController
 @RequestMapping("/v1/${classname}")
 public class ${className}Controller {
@@ -35,7 +32,6 @@ public class ${className}Controller {
 	 * @param id 系统ID
 	 * @return ${tableComment}信息
 	 */
-	@ApiOperation(notes = "通过id查询${tableComment}信息", value = "通过id查询${tableComment}信息")
 	@GetMapping("/findById")
 	public ${className}Entity findById(Long id) {
 		return ${classname}Service.findById(id);
@@ -47,7 +43,6 @@ public class ${className}Controller {
     * @param ${classname}ConditionEntity 条件
     * @return ${tableComment}列表
     */
-	@ApiOperation(notes = "根据条件查询${tableComment}列表", value = "根据条件查询${tableComment}列表")
 	@PostMapping("/searchByPage")
 	public ResponsePageEntity<${className}Entity> searchByPage(@RequestBody ${className}ConditionEntity ${classname}ConditionEntity) {
 		return ${classname}Service.searchByPage(${classname}ConditionEntity);
@@ -60,7 +55,6 @@ public class ${className}Controller {
      * @param ${classname}Entity ${tableComment}实体
      * @return 影响行数
      */
-	@ApiOperation(notes = "添加${tableComment}", value = "添加${tableComment}")
 	@PostMapping("/insert")
 	public int insert(@RequestBody ${className}Entity ${classname}Entity) {
 		return ${classname}Service.insert(${classname}Entity);
@@ -72,7 +66,6 @@ public class ${className}Controller {
      * @param ${classname}Entity ${tableComment}实体
      * @return 影响行数
      */
-	@ApiOperation(notes = "修改${tableComment}", value = "修改${tableComment}")
 	@PostMapping("/update")
 	public int update(@RequestBody ${className}Entity ${classname}Entity) {
 		return ${classname}Service.update(${classname}Entity);
@@ -84,7 +77,6 @@ public class ${className}Controller {
      * @param ids ${tableComment}ID集合
      * @return 影响行数
      */
-	@ApiOperation(notes = "批量删除${tableComment}", value = "批量删除${tableComment}")
 	@PostMapping("/deleteByIds")
 	public int deleteByIds(@RequestBody @NotNull List<Long> ids) {
 		return ${classname}Service.deleteByIds(ids);
